1、修复下拉树，显示的不对的问题；原因是：加载面板时，加载进度的div占用了高度的原因； 2、新增搜索按回车立即搜索的功能； 3、修复流程实例列表与表达元素冲突问题； 4、修复其他一些bug.

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -95,7 +95,7 @@ tr.text-center td,tr.text-center th {text-align: center;}
 	font-size:12px;
 }
 .dropdown-loading {padding-top:5px;padding-left:5px;padding-bottom:10px;}
-.cnoj-loading {padding-top:20px;padding-left:50px;padding-bottom:20px;}
+.cnoj-loading {position: absolute;padding-top:20px;padding-left:50px;padding-bottom:20px;}
 
 .v-show {visibility:visible;}
 .v-hidden {visibility: hidden;}
@@ -111,3 +111,7 @@ tr.text-center td,tr.text-center th {text-align: center;}
 .v-d-header {font-weight: 700;color: #555555;margin-bottom: 5px; }
 .v-d-content {line-height: 150%;padding-left: 5px;color: #444444;}
 .cnoj-checkbox p {margin-bottom: 5px;}
+
+.text-inline .form-control-feedback {
+	top: -8px;
+}
