--- a/src/main/webapp/css/cnoj-ui.css
+++ b/src/main/webapp/css/cnoj-ui.css
@@ -18,3 +18,8 @@
 .cnoj-header {background-color: #d9edf7;}
 .goto-page-input {width:35px; margin-top:5px; height:20px;}
 .cnoj-richtext {width: 99%;}
+select.input-sm.cnoj-change-pagesize {
+    width: 45px;
+    height: 22px;
+    padding: 0px 3px;
+}
