--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -193,3 +193,10 @@ h4.ui-widget-header {margin-bottom: 0;font-size: 12px;}
 .list-col{white-space: nowrap;text-overflow: ellipsis;overflow: hidden;}
 .list-row {padding:5px 0 5px 2px;border-bottom: 1px solid #d4eeeb;}
 .list-content {padding: 0 20px;}
+.td-bs-checkbox {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+th .td-bs-checkbox label {
+    font-weight: 700;
+}
