1.新增表单设计器支持批量上传文件； 2.调整页面高度设置； 3.调整样式

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -115,3 +115,6 @@ tr.text-center td,tr.text-center th {text-align: center;}
 .text-inline .form-control-feedback {
 	top: -8px;
 }
+.no-border,.panel.no-border {
+    border: none;
+}
