--- a/src/main/webapp/css/easyui-bootstrap.css
+++ b/src/main/webapp/css/easyui-bootstrap.css
@@ -3,7 +3,6 @@
 .tabs-panels .panel.panel-default{
   margin-bottom: 0px;
   background-color: #fff;
-  border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
@@ -13,3 +12,4 @@
 .dropdown-menu.tabs-menu>li>a {padding: 3px 10px;font-size: 12px;}
 .dropdown-menu.tabs-menu {min-width: 140px;}
 .dropdown-menu.tabs-menu .divider { margin: 3px 0;}
+.tabs li.tabs-selected a.tabs-inner {border-bottom-width:2px; }
