--- a/src/main/webapp/css/cnoj-ui.css
+++ b/src/main/webapp/css/cnoj-ui.css
@@ -16,10 +16,14 @@
 .cnoj-ui-tr-selected tr>td{cursor: pointer;}
 .cnoj-auto-limit-height {padding-top: 0;padding-bottom: 0;}
 .cnoj-header {background-color: #d9edf7;}
-.goto-page-input {width:35px; margin-top:5px; height:20px;}
+.goto-page-input {
+    width: 40px;
+    margin-top: 3px;
+    height: 28px;
+}
 select.input-sm.cnoj-change-pagesize {
     width: 45px;
-    height: 22px;
+    height: 28px;
     padding: 0px 3px;
 }
 .cnoj-richtext {width: 95%;}
