--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -100,3 +100,7 @@ table>tbody>tr.tr-asyn-loading>td {padding-left: 35px;}
 .row-title-wrap {
     background: #fafafa;
 }
+th.has-switch {
+	display: table-cell;
+}
+display: table-cell;
