--- a/src/main/webapp/css/bootstrap-rewrite.css
+++ b/src/main/webapp/css/bootstrap-rewrite.css
@@ -17,10 +17,16 @@
 }
 
 .table-condensed>thead>tr>th,.table-condensed>thead>tr>th.th-checkbox.text-center, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
-	padding: 5px;
+	padding: 3px;
 }
 
-
+.table-condensed>thead>tr>th .form-control,
+.table-condensed>tbody>tr>th .form-control,
+.table-condensed>thead>tr>td .form-control,
+.table-condensed>tbody>tr>td .form-control {
+	padding: 4px 6px;
+	height: 30px;
+}
 
 /*.table-condensed>tbody>tr>th {color:#2779aa;}*/
 .modal-header {padding: 8px 15px;}
