1.修复表单数据保存时，有可能会报空指针异常的问题；2.修改js必填元素undefined问题；3.开发简单报表功能；

--- a/src/main/webapp/css/bootstrap-rewrite.css
+++ b/src/main/webapp/css/bootstrap-rewrite.css
@@ -15,15 +15,13 @@
 	padding-left: 10px;
 	/*font-weight: normal;*/
 }
-
+/*
 .table-condensed>thead>tr>th,.table-condensed>thead>tr>th.th-checkbox.text-center, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
 	padding: 3px;
-}
+}*/
 
-.table-condensed>thead>tr>th .form-control,
-.table-condensed>tbody>tr>th .form-control,
-.table-condensed>thead>tr>td .form-control,
-.table-condensed>tbody>tr>td .form-control {
+.table-condensed>tbody>tr>td input.form-control,
+.table-condensed>tbody>tr>td select.form-control {
 	padding: 4px 6px;
 	height: 30px;
 }
