1.修改用户登录方法；2.表单设计器列表控件支持合计功能

--- a/src/main/webapp/plugins/ueditor/formdesign/css/form.design.css
+++ b/src/main/webapp/plugins/ueditor/formdesign/css/form.design.css
@@ -36,5 +36,12 @@ select[multiple] {height: 110px;}
 .input-small {
     width: 100px;
 }
+.input-m-small {
+	width: 80px;
+}
 .input-default-value label{display: inline-block;margin:0 2px;}
 .input-default-value label input {margin:0;}
+
+.input-m-mini {
+	width: 40px;
+}
